# exchange-connection-hub

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  ninjatrader_integration.rs
src/: lib.rs  main.rs  manager.rs  registry.rs
src/adapters/: market_data.rs  mod.rs
src/protocols/: base.rs  mod.rs  ninjatrader.rs  websocket.rs  websocket.rs.bak  websocket.rs.new
src/types/: mod.rs
tests/: integration_tests.rs
